snippets/manifests/cert-manager/ingress-echo-server-tls-annotated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: echo.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  name: http
  tls:
    - hosts:
        - echo.example.org
      secretName: echo-server-tls
